# dotfiles

./: .gitignore  .gitmodules  .luarc.json  README.md  config.json  packages.conf  setup.sh  test.sh
.github/workflows/: Add-pdfs.yml  python-app.yml
Arch/: installer.sh  link.sh
Arch/mime/: Overrides.xml
Arch/templates/: Untitled-1.pd
Config/: plugdata.theme.light
Config/formatters/: .clang-format
Config/home/: .bash_history  .bash_profile  .bashrc  .pdsettings  .wezterm.lua  .zshrc
Config/hypr/: functions.sh  hyprland.conf  hyprlock.conf  keybinds.conf  startup.conf  windowrule.conf
Config/kitty/: kitty.conf
Config/lazygit/: state.yml
Config/nvim/: init.lua
Config/plugdata/: .settings
Config/sway/: config
Config/swaylock/: config
Config/swaync/: config.json
Config/waybar/: config  config.json  style.css
Scripts/: checkupdates  clear-old-worksflows.py  delete-github-workflows.sh  delete_old_workflows.sh  notion2obsidian.py  raid-rsync  raid.sh
arch/: installer.sh  link.sh  packages.conf
arch/mime/: Overrides.xml
config/ghostty/: config
docker/: mac.yml  windows.yml
mac/: link.sh
scripts/: .env-examples  GoogleBooks2Notion.py  TelegramBot.py  chatgpt-translation  check-web-page.py  deken  delete-github-workflows.sh  edgetts.py  git-diff.py  git-updates  import-pdf-notes.py  monitor_mode.sh  niri-use.py  notitranslation  ocr  pdf2notion  pdf2notion-offline.py  pdf2notion.py  random-wallpapers.py  remember-me-Updated.py  requirements.txt  revistas.py  test-pd-externos.py  todo-days.py  transcription.py  translations.py  update-notion-icons.py  utils.sh
utils/: CMakeLists.txt  hakatime.cpp  niriuse.cpp
(+121 files in other folders)
